compiler/weave_syntax/tests/data/syntax/Namespace.error
error: unexpected token ',', expected ')'
        --> <source>:10:36
         |
      10 |     public var precedence = g1[((g1, g2), g3), g4];
         |                                    ^
error: unexpected token '[token:identifier]', expected ')'
        --> <source>:10:38
         |
      10 |     public var precedence = g1[((g1, g2), g3), g4];
         |                                      ^^
error: unexpected token ')', expected ']'
        --> <source>:10:40
         |
      10 |     public var precedence = g1[((g1, g2), g3), g4];
         |                                        ^
error: unexpected token ',', expected ';'
        --> <source>:10:41
         |
      10 |     public var precedence = g1[((g1, g2), g3), g4];
         |                                         ^
error: unexpected token '[token:identifier]', expected member declaration
        --> <source>:10:43
         |
      10 |     public var precedence = g1[((g1, g2), g3), g4];
         |                                           ^^
error: unexpected token ')', expected member declaration
        --> <source>:10:45
         |
      10 |     public var precedence = g1[((g1, g2), g3), g4];
         |                                             ^
error: unexpected token ',', expected member declaration
        --> <source>:10:46
         |
      10 |     public var precedence = g1[((g1, g2), g3), g4];
         |                                              ^
error: unexpected token '[token:identifier]', expected member declaration
        --> <source>:10:48
         |
      10 |     public var precedence = g1[((g1, g2), g3), g4];
         |                                                ^^
error: unexpected token ']', expected member declaration
        --> <source>:10:50
         |
      10 |     public var precedence = g1[((g1, g2), g3), g4];
         |                                                  ^
error: unexpected token ';', expected member declaration
        --> <source>:10:51
         |
      10 |     public var precedence = g1[((g1, g2), g3), g4];
         |                                                   ^
